<resources>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="ga_trackingId">UA-41034151-1</string>
    <string name="CHANGELOG">"What's new:
 - Better performance when obtaining bus schedules.
 - Fixed a bug when showing bus stops with many bus lines.
"</string>
    <string name="app_name">TransantiagoMaster</string>
    <string name="app_id">504040592939271</string>
    <string name="ACERCAR">Zoom in</string>
    <string name="ALEJAR">Zoom out</string>
    <string name="BUSCANDO_POR">Searching for</string>
    <string name="BUSCAR">Search</string>
    <string name="BUSCAR_CONTACTO">Find contact</string>
    <string name="BUSCAR_LUGAR">Find place</string>
    <string name="CANCELAR">Cancel</string>
    <string name="COMPILACION_PARA">Compiled for Android 1.6</string>
    <string name="CONFIRMAR_PERMISOS">Authorize permissions</string>
    <string name="DEMASIADOS_RECORRIDOS">Too many bus services found, please add a search term.</string>
    <string name="DESARROLLADO_POR">Developed by Ivan R. Toledo Ivanovic - Birdie Ltda.</string>
    <string name="DESCARGA_FINALIZADA">Download finished!</string>
    <string name="DESCARGA_GUARDANDO">Saving…</string>
    <string name="DESCARGA_ITINERARIOS">Downloading itineraries…</string>
    <string name="DESCARGA_PARADEROS">Downloading bus stops…</string>
    <string name="DESCARGA_PROCESANDO">Processing…</string>
    <string name="E_MAIL">E-Mail</string>
    <string name="EJEMPLO_DE_BUSQUEDA">Example Search Terms:</string>
    <string name="EJEMPLO_DE_BUSQUEDA_1">avenida el bosque 729 providencia</string>
    <string name="EJEMPLO_DE_BUSQUEDA_2">clinica santa maria</string>
    <string name="ENVIAR_POSICION">Send position</string>
    <string name="ENCONTRAR_CAMINO">Plan your trip</string>
    <string name="ERROR_DESCARGANDO_ITINERARIO">An error has occurred while downloading bus stops.</string>
    <string name="ERROR_DESCARGANDO_RECORRIDOS">An error has occurred while downloading bus services.</string>
    <string name="ERROR_DESCARGANDO_PLANIFICACION">An error has occurred while downloading your planned trip.</string>
    <string name="IDA">Depart</string>
    <string name="PARADERO_MAS_CERCANO">Nearest Bus stop</string>
    <string name="REFRESCAR_MAPA">Refresh map</string>
    <string name="REGRESO">Arrival</string>
    <string name="SENTIDO">Direction</string>
    <string name="VERSION">version</string>
    <string name="URL_BIRDIE">http://www.birdie.cl</string>
    <string name="LUGAR_DE_ORIGEN">Start point</string>
    <string name="LUGAR_DE_DESTINO">End point</string>
    <string name="PLANIFICAR_MI_VIAJE">Plan my trip!</string>
    <string name="REGISTRAR_EN_TWITTER">Twitter Log In</string>
    <string name="ESTADO_DE_REGISTRO_TWITTER">Twitter Connection State:</string>
    <string name="ANULAR_REGISTRO_TWITTER">Twitter Log Out</string>
    <string name="ENVIANOS_UN_EMAIL">Send us an email</string>
    <string name="DIRECCION_DESTINO">Destination address or place</string>
    <string name="DIRECCION_ORIGEN">Start address or place</string>
    <string name="OPCIONES_ZOOM">Zoom buttons</string>
    <string name="OPCIONES_USAR_GPS">GPS Location</string>
    <string name="OPCIONES_USAR_RED">Network Location</string>
    <string name="OPCIONES_USAR_VIBRACION">Vibrate</string>
    <string name="PLANIFICAR_EVITAR_TRANSBORDOS">Avoid transfers</string>
    <string name="OPCIONES_MANOS_LIBRES">Use Hands-Free media button</string>
    <string name="SPEECH_INSTALAR_SOPORTE_VOZ">Install Speech support</string>
    <string name="lblComentar">Comment:</string>
    <string name="COMENTAR">Comment</string>
    <string name="lblSelectSource">From where do you want to share?</string>
    <string name="sourceGallery">Gallery</string>
    <string name="sourceCamera">Camera</string>
    <string name="FACEBOOK_COMMENT_HINT">Enter your comment here!</string>
    <string name="FACEBOOK_FAVORITE_RESTORE">Reenable Facebook sharing confirmation</string>
    <string name="DESCARGAR_BASE_DATOS">Download database and map</string>
    <string name="MAPA_ESTILO">Map style</string>
    <string name="MAPA_ESTILO_DEFAULT">0</string>
    <string name="MAPA_ESTILO_SUMM" />
    <string name="OPCIONES_USAR_RED_SUMM">Use network for location services</string>
    <string name="OPCIONES_USAR_GPS_SUMM">Use GPS for location services (may use more power)</string>
    <string name="OPCIONES_USAR_VIBRACION_SUMM">Vibrate your phone on certain events</string>
    <string name="OPCIONES_MANOS_LIBRES_SUMM">Enable your hands-free device to command TransantiagoMaster</string>
    <string name="OPCIONES_ZOOM_SUMM">For devices without pinch-to-zoom</string>
    <string name="OPCIONES_SITIO_WEB">Web site</string>
    <string name="OPCIONES_INSTALAR_SOPORTE_VOZ_SUMM">Install voice packages to use voice commands</string>
    <string name="OPCIONES_DESCARGAR_BASE_DATOS_SUMM">Faster navigation</string>
    <string name="OPCIONES_ENVIANOS_EMAIL_SUMM">"Write to this app's developers"</string>
    <string name="OPCIONES_FACEBOOK_FAVORITE_RESTORE_SUMM">Share your favorites on Facebook</string>
    <string name="paradero_appwidget_hint">Bus stop code (ex. PC201)</string>
    <string name="paradero_appwidget_anadir">Add</string>
    <string name="paradero_appwidget_desde">Automatic refresh from …</string>
    <string name="paradero_appwidget_hasta">… until …</string>
    <string name="paradero_appwidget_footer">… every 5 minutes.</string>
</resources>