<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/lblBuscar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/BUSCAR" />
    <EditText android:id="@id/edtBuscar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="true">
        <requestFocus />
    </EditText>
    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/lblExample" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/EJEMPLO_DE_BUSQUEDA" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/lblSearchTerm1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/EJEMPLO_DE_BUSQUEDA_1" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/EJEMPLO_DE_BUSQUEDA_2" />
    <LinearLayout android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btnSearch" android:layout_width="114.0dip" android:layout_height="wrap_content" android:text="@string/BUSCAR" />
        <Button android:id="@id/btnCancel" android:layout_width="106.0dip" android:layout_height="wrap_content" android:text="@string/CANCELAR" />
    </LinearLayout>
</LinearLayout>