<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/lblComentario" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lblComentar" />
    <EditText android:id="@id/edtComentario" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="200.0dip" android:hint="@string/FACEBOOK_COMMENT_HINT" android:singleLine="true" android:inputType="text">
        <requestFocus />
    </EditText>
    <LinearLayout android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btnComent" android:layout_width="114.0dip" android:layout_height="wrap_content" android:text="@string/COMENTAR" />
        <Button android:id="@id/btnCancel" android:layout_width="106.0dip" android:layout_height="wrap_content" android:text="@string/CANCELAR" />
    </LinearLayout>
</LinearLayout>